--- a/Styles/style.css
+++ b/Styles/style.css
@@ -478,6 +478,8 @@ hrml,body{
   color: #932724;
 }
 
+
+
 @media (max-width: 767px) {
   .catalog-nav {
     width: 500px;
@@ -530,67 +532,12 @@ hrml,body{
   content: none;
 }
 
-@media (max-width: 1250px) {
-  .catalog {
-    margin: 0 -20px;
-  }
 
-  .catalog__item {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
 
-@media (max-width: 1150px){
-	.catalog__item {
-    width: 33%;
-  }
-}
 
-@media (max-width: 992px) {
-  .catalog__item {
-    width: 50%;
-  }
 
-  .catalog__item:nth-of-type(even)::before {
-    content: '';
-  }
 
-  .catalog__item:nth-of-type(odd)::before {
-    content: none;
-  }
-}
 
-@media (max-width: 767px) {
-  .catalog__item {
-    width: 100%;
-    margin-bottom: 50px;
-  }
-
-  .catalog__item:nth-of-type(n)::before {
-    content: none;
-  }
-
-  .catalog__product {
-    width: 350px;
-    max-width: 100%;
-    margin: 0 auto;
-    border-bottom: 2px solid #f7f7f7;
-    padding-bottom: 50px;
-  }
-
-  .catalog__item:last-of-type {
-    margin-bottom: 0;
-  }
-
-  .catalog__item:last-of-type .catalog__product {
-    border-bottom: 0;
-    padding-bottom: 0;
-  }
-}
-/* catalog end */
-
-/* product start */
 .product {
   display: flex;
   flex-direction: column;
@@ -598,6 +545,11 @@ hrml,body{
 	background: #fff;
 	border-radius: 20px;
 	overflow: hidden;
+}
+.product__content{
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
 }
 
 .product:hover {
@@ -642,10 +594,68 @@ hrml,body{
 	overflow: hidden;
 }
 
-.product__content {
-  flex-grow: 1;
-	padding: 10px;
+@media (max-width: 1150px){
+	.catalog__item {
+    width: 33%;
+  }
+	.product__description{
+		max-height: 80px;
+	}
 }
+
+@media (max-width: 992px) {
+  .catalog__item {
+    width: 50%;
+  }
+
+  .catalog__item:nth-of-type(even)::before {
+    content: '';
+  }
+
+  .catalog__item:nth-of-type(odd)::before {
+    content: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__item {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .catalog__item:nth-of-type(n)::before {
+    content: none;
+  }
+
+  .catalog__product {
+    width: 350px;
+    max-width: 100%;
+    margin: 0 auto;
+    border-bottom: 2px solid #f7f7f7;
+
+  }
+
+  .catalog__item:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .catalog__item:last-of-type .catalog__product {
+    border-bottom: 0;
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 1250px) {
+  .catalog {
+    margin: 0 -20px;
+  }
+
+  .catalog__item {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 
 .product__price {
   font-family: 'Montserrat', sans-serif;
@@ -693,11 +703,7 @@ hrml,body{
   }
 }
 
-@media (max-width: 370px) {
-  .product__price {
-    font-size: 18px;
-  }
-}
+
 
 
 
@@ -797,6 +803,12 @@ hrml,body{
 	padding-left: 30px;
 }
 
+@media (max-width:585px){
+	.links-footer{
+		display: block;
+		padding-top: 5px;
+	}
+}
 
 
 
