--- a/Styles/style.css
+++ b/Styles/style.css
@@ -244,7 +244,7 @@ hrml,body{
 }
 
 .sec-top__btn button{
-	background: #932724;
+	background: #ff000f;
 	color: #fff;
 	display: inline-block;
 	padding: 19px 20px;
@@ -298,7 +298,7 @@ hrml,body{
 
 
 .btn {
-  background: #ff5441;
+  background: #ff000f;
   color: #fff;
   display: inline-block;
   padding: 18px 20px;
@@ -428,7 +428,7 @@ hrml,body{
 
 .page-title {
 	margin: 0 auto 20px;
-  color: #932724;
+  color: #ff000f;
 	font-size: 50px;
 	width: 100%;
 	text-align: center;
@@ -471,7 +471,7 @@ hrml,body{
 }
 
 .catalog-nav__btn.is-active {
-  color: #932724;
+  color: #ff000f;
 }
 
 .catalog-nav__btn:not(.is-active):hover {
@@ -674,7 +674,7 @@ hrml,body{
 }
 
 .product__btn {
-  background: #932724;
+  background: #ff000f;
 	color: #fff;
 	display: inline-block;
 	border-radius: 28px;
