--- a/Styles/style.css
+++ b/Styles/style.css
@@ -619,7 +619,7 @@ hrml,body{
 
 @media (max-width: 767px) {
   .catalog__item {
-    width: 100%;
+    width: 50%;
     margin-bottom: 50px;
   }
 
@@ -635,15 +635,8 @@ hrml,body{
 
   }
 
-  .catalog__item:last-of-type {
-    margin-bottom: 0;
-  }
-
-  .catalog__item:last-of-type .catalog__product {
-    border-bottom: 0;
-    padding-bottom: 0;
-  }
 }
+
 
 @media (max-width: 1250px) {
   .catalog {
@@ -654,6 +647,10 @@ hrml,body{
     padding-left: 20px;
     padding-right: 20px;
   }
+
+	.product__title{
+		font-size: 20px;
+	}
 }
 
 
@@ -700,6 +697,115 @@ hrml,body{
 @media (max-width: 370px) {
   .product__size {
     padding: 13px 25px;
+  }
+}
+
+
+@media (max-width: 600px){
+	.product__img{
+		height: 230px;
+	}
+
+	.product__title{
+		font-size: 18px;
+	}
+	.product__price{
+		font-size: 20px;
+	}
+	.product:hover .product__price{
+		font-size: 20px;
+	}
+	.product__btn{
+		width: 130px;
+		border-radius: 25px;
+		padding: 13px 0px;
+	}
+
+}
+
+@media (max-width: 520px){
+	.product__img{
+		height: 200px;
+	}
+
+	.product__title{
+		font-size: 17px;
+	}
+	.product__price{
+		font-size: 16px;
+	}
+	.product__description{
+		font-size: 14px;
+		max-height: 80px;
+	}
+	.product:hover .product__price{
+		font-size: 16px;
+	}
+	.product__btn{
+		width: 120px;
+		border-radius: 25px;
+		padding: 11px 0px;
+	}
+
+}
+
+@media (max-width: 500px){
+	.product__img{
+		height: 180px;
+	}
+
+	.product__title{
+		font-size: 16px;
+	}
+	.product__price{
+		font-size: 16px;
+	}
+	.product:hover .product__price{
+		font-size: 16px;
+	}
+	.product__description{
+		font-size: 14px;
+		max-height: 60px;
+	}
+	.product__btn{
+		width: 100px;
+		border-radius: 25px;
+		padding: 13px 0px;
+		font-size: 16px;
+	}
+	.catalog__item {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 430px){
+	.product__img{
+		height: 180px;
+	}
+
+	.product__title{
+		font-size: 14px;
+	}
+	.product__price{
+		font-size: 16px;
+	}
+	.product:hover .product__price{
+		font-size: 16px;
+	}
+	.product__description{
+		font-size: 12px;
+		max-height: 50px;
+
+	}
+	.product__btn{
+		width: 90px;
+		border-radius: 20px;
+		padding: 13px 0px;
+		font-size: 14px;
+	}
+	.catalog__item {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
