--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,10 @@
 	border: 0;
 }
 
+a{
+	text-decoration: none;
+}
+
 hrml,body{
 	font-family: ubuntu;
 	font-weight: 500;
@@ -243,11 +247,10 @@ hrml,body{
 	margin: 0 0 35px;
 }
 
-.sec-top__btn button{
-	background: #ff000f;
+.sec-top__btn a{
+	background: #FF0000;
 	color: #fff;
 	display: inline-block;
-	padding: 19px 20px;
 	width: 240px;
 	max-width: 100%;
 	border-radius: 28px;
@@ -262,11 +265,11 @@ hrml,body{
 	transition: background 0.5s;
 }
 
-.sec-top__btn button:hover{
-	background: #ff000f;
+.sec-top__btn a:hover{
+	background: #FF0000;
 }
 
-.sec-top__btn button:active{
+.sec-top__btn a:active{
 	opacity: 0.8;
 	transform: scale(.99);
 }
@@ -276,7 +279,7 @@ hrml,body{
 		padding-top: 50px;
 	}
 
-	.sec-top__btn button{
+	.sec-top__btn a{
 		padding: 18px 20px;
 	}
 }
@@ -291,7 +294,7 @@ hrml,body{
 		margin: 0 0 20px;
 	}
 	
-	.sec-top__btn button{
+	.sec-top__btn a{
 		padding: 13px 20px;
 	}
 }
@@ -317,7 +320,7 @@ hrml,body{
 }
 
 .btn:hover {
-  background: #ec4b38;
+  background: #FF0000;
 }
 
 .btn:active {
@@ -906,11 +909,11 @@ hrml,body{
 		font-size: 13px;
 	}
 	.product__price{
-		font-size: 12.5px;
+		font-size: 13px;
 		padding-left: 0px;
 	}
 	.product:hover .product__price{
-		font-size: 12.5px;
+		font-size: 13px;
 	}
 	.product__description{
 		font-size: 12px;
@@ -1036,150 +1039,241 @@ hrml,body{
 	}
 }
 
-
-
 .popup {
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  background: rgba(0,0,0,.7);
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-	transition: all 0.5s;
-}
-
-.popup.is-active {
-  pointer-events: auto;
-  opacity: 1;
-  visibility: visible;
-}
-
-.popup__wrapper {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
-
-.popup__inner {
-  display: table-cell;
-  vertical-align: middle;
-  padding: 50px 0;
-}
-
-.popup__content {
-  background: #fff;
-  padding: 70px 20px;
-  max-width: 730px;
-  margin: 0 auto;
-  position: relative;
-  border-radius: 20px;
-}
-
-
-.popup__content--fluid {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.popup__content--centered {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.popup__btn-close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
-.popup__title {
-  margin-bottom: 20px;
-	margin: 0 auto 20px;
-  color: #000;
-	font-size: 50px;
+	position: fixed;
 	width: 100%;
-	text-align: center;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .8);
+	top: 0;
+	left: 0;
+	opacity: 0;
+	visibility: hidden;
+	transition: all .5s;
+
+
+}
+
+.popup:target{
+	opacity: 1;
+	visibility: visible;
+}
+
+.popup__area{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	cursor: auto;
+}
+
+.popup__body {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 30px 10px;
+	margin: 20px;
+}
+.popup__content {
+	background-color: #fff;
+	color: #000;
+	display: flex;
+	width: 1000px;
+	padding: 20px;
+	max-height: 500px;
+	height: 500px;
+	border-radius: 25px;
+	position: relative;
+}
+.popup__close {
+	position: absolute;
+	right: 40px;
+	top: 27px;
+	font-size: 20px;
+	color: #000;
+	text-decoration: none;
+}
+.popup__img{
+	height: 100%;
+	border-radius: 20px;
+}
+.popup__text{
+	max-width: 50%;
+	max-height: 100%;
+	padding-left: 25px;
+	
+}
+
+.popup__title{
+	font-size: 35px;
+	font-weight: 600;
+}
+.popup__btnprice{
+	display: flex;
+	justify-content: space-between;
+	padding-top: 200px;
+}
+
+.popup__price{
+	padding-left: 0;
+	font-size: 40px;
+	margin-top: auto;
+  margin-bottom: auto;
+}
+
+.popup__btn{
+  background: #ff000f;
+	color: #fff;
+	display: inline-block;
+	border-radius: 28px;
+	font-family: montserrat;
 	font-weight: 900;
-}
-.form__input{
-	margin: 0 auto;
-	width: 80%;
-	text-align: left;
-	padding-bottom: 10px;
-	margin-bottom: 30px;
-	border-bottom: 1px solid #000;
-	outline: none;
-	font-size: 16px;
-}
+	font-size: 18px;
+	border: 0;
+	cursor: pointer;
+	text-align: center;
+	letter-spacing: .03em;
+	box-shadow: 0 0 38px 0 rgba(212, 66, 50, 0.8);
+	transition: all 0.5s;
+  width: 160px;
+  padding: 17px 20px;
 
-.form__btn{
-	margin-top: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
 }
 
-.popup__subtitle {
-  margin: 0;
-	color: #696969;
-  text-align: center;
-  font-size: 22px;
+.popup__description{
+	padding-top: 10px;
+	font-size: 18px;
+  color: #9f9f9f;
+	transition: color 0.5s;
 }
 
-.popup__subtitle--order {
-  max-width: 360px;
-  margin: 0 auto 40px;
+.popup__opis{
+	max-height: 200px;
+	height: 200px;
 }
 
-.popup__mobile-menu {
-  margin-bottom: 30px;
+@media (max-width:850px){
+	.popup__content{
+		width: 100%;
+		border-radius: 0;
+	}
+	.popup__body{
+		padding: 0px 0px;
+		margin: 0px;
+	}
 }
 
-.popup__phone {
-  margin-bottom: 30px;
+@media (max-width:767px){
+	.popup__content {
+		background-color: #fff;
+		color: #000;
+		display: block;
+		padding: 20px;
+		max-height: 1000px;
+		height: 100%;
+		align-items: center;
+	}
+	.popup__text{
+		max-width: 100%;
+		text-align: center;
+		padding-left: 0px;
+	}
+	.popup__img{
+		height: 70%;
+		width: 70%;
+		border-radius: 20px;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
+		
+		
+	}
+	.popup__btnprice{
+		display: flex;
+		justify-content: space-between;
+		padding-top: 0px;
+	}
+	.popup__opis{
+		max-height: 200px;
+		height: 140px;
+
+	}
+	.popup__close {
+		position: absolute;
+		right: 10px;
+		top: 10px;
+		font-size: 25px;
+		color: #000;
+		text-decoration: none;
+	}
+	
 }
 
-.popup__link {
-  text-decoration: none;
-  color: inherit;
-  white-space: nowrap;
+@media (max-width:560px){
+	.popup__title{
+		font-size: 1.7em;
+	}
 }
 
-@media (max-width: 767px) {
-  .popup__inner {
-    padding: 0;
-  }
-
-  .popup__content {
-    max-width: 100%;
-    height: 100%;
-    border-radius: 0;
-    padding-top: 100px;
-  }
-
-  .popup__subtitle {
-    font-size: 18px;
-  }
-
-  .popup__subtitle--order {
-    max-width: 260px;
-  }
+@media (max-width:445px){
+	.popup__title{
+		font-size: 1.4em;
+	}
+	.popup__img{
+		height: 80%;
+		width: 80%;
+		border-radius: 20px;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
+		
+		
+	}
+	
 }
 
+@media (max-width:375px){
+	.popup__title{
+		font-size: 1.2em;
+	}
+	.popup__img{
+		height: 85%;
+		width: 85%;
+		border-radius: 20px;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
+		
+		
+	}
+	.popup__description{
+		font-size: 16px;
+	}
+	.popup__price{
+		padding-left: 0;
+		font-size: 30px;
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+}
 
-
-
-
-
-
-
-
+@media (max-width:326px){
+	.popup__title{
+		font-size: 1.1em;
+	}
+	.popup__img{
+		height: 85%;
+		width: 85%;
+		border-radius: 20px;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
+	}
+	.popup__description{
+		font-size: 15px;
+	}
+}
 
 
 
