--- a/Styles/style.css
+++ b/Styles/style.css
@@ -279,9 +279,7 @@ hrml,body{
 		padding-top: 50px;
 	}
 
-	.sec-top__btn a{
-		padding: 18px 20px;
-	}
+
 }
 
 @media (max-width:500px){
@@ -294,9 +292,7 @@ hrml,body{
 		margin: 0 0 20px;
 	}
 	
-	.sec-top__btn a{
-		padding: 13px 20px;
-	}
+
 }
 
 
@@ -304,7 +300,7 @@ hrml,body{
   background: #ff000f;
   color: #fff;
   display: inline-block;
-
+	padding: 18px 20px;
   width: 240px;
   max-width: 100%;
   border-radius: 28px;
@@ -803,6 +799,14 @@ hrml,body{
     padding-left: 10px;
     padding-right: 10px;
   }
+}
+@media (max-width: 500px){
+	.product__btn{
+		width: 110px;
+		border-radius: 25px;
+		padding: 12px 0px;
+		font-size: 13px;
+	}
 }
 @media (max-width: 430px){
 	.product__img{
