--- a/Styles/style.css
+++ b/Styles/style.css
@@ -89,6 +89,8 @@ hrml,body{
 	font-family: rubik;
 }
 
+
+
 .points{
 	display: flex;
 	position: relative;
@@ -1412,4 +1414,43 @@ hrml,body{
 }
 
 
+.cart{
+	position: fixed;
+	z-index: 10;
+	top: 100px;
+	right: 50px;
+	color: #000;
+	font-size: 25px;
+	width: 80px;
+	height: 80px;
+	background-color: #fff;
+	border-radius: 50%;
+}
 
+.cart i{
+	position: absolute;
+	top: 50%;
+	transform: translate(0, -50%);
+	width: 100%;
+	text-align: center;
+}
+
+@media (max-width:1200px){
+	.cart{
+		right: 15px;
+		width: 50px;
+		height: 50px;
+		font-size: 18px;
+		top: 80px;
+	}
+}
+
+@media (max-width:767px){
+	.cart{
+		top: 70px;
+		width: 35px;
+		height: 35px;
+		font-size: 16px;
+		right: 16px;
+	}
+}
