--- a/Styles/cart.css
+++ b/Styles/cart.css
@@ -285,6 +285,8 @@ hrml,body{
 	margin-top: auto;
 	margin-bottom: auto;
 	background: #fff;
+	
+	padding-left: 13px;
 }
 
 .cart_dell img{
@@ -363,6 +365,7 @@ hrml,body{
 	}
 	.cart_bottom{
 		padding: 10px;
+		padding-top: 30px;
 	}
 
 }
@@ -399,6 +402,12 @@ hrml,body{
 	}
 	.cart_bottom{
 		padding: 10px;
+	}
+	.cart_dell{
+
+		padding-left: 9px;
+		width: 20px;
+		height: 20px;
 	}
 
 }
